--- a/src/pages/site/Home/Home.scss
+++ b/src/pages/site/Home/Home.scss
@@ -96,12 +96,17 @@
     background-color: $brand-primary-color;
     color: $light-text-color !important;
     width: 100%;
+    display: flex;
+    flex-direction: column;
     
     .container {
         max-width: 1200px;
         margin: 0 auto;
         padding: 3rem 0;
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     
     &__title {
@@ -124,7 +129,7 @@
         gap: 3rem;
         max-width: 1200px;
         margin: 0 auto;
-        padding: 0 2rem 2rem 2rem;
+        padding: 0 2rem;
         width: 100%;
     }
 
